feat: form validation

--- a/src/pages/contact/styles.module.scss
+++ b/src/pages/contact/styles.module.scss
@@ -2,4 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+
+  label {
+    display: flex;
+    flex-direction: column;
+
+    &+label {
+      margin-top: 16px;
+    }
+  }
 }
