--- a/src/components/Banner/style.module.scss
+++ b/src/components/Banner/style.module.scss
@@ -1,3 +1,9 @@
+@use 'styles/base/variables';
+
+.swiperWrapper {
+  position: relative;
+}
+
 .swiper {
   width: 100%;
   height: 400px;
@@ -37,5 +43,78 @@
     height: 100%;
     object-fit: cover;
     object-position: center;
+    &:hover {
+      cursor: pointer;
+    }
   }
 }
+
+.swiper-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10;
+  cursor: pointer;
+  user-select: none;
+  color: variables.$primary-color;
+  background-color: rgba(0, 0, 0, .85);
+  width: 50px;
+  height: 50px;
+  
+  :global(.material-symbols-outlined) {
+    font-size: 30px;
+  }
+
+  &:global(.swiper-button-disabled) {
+    opacity: 0.5;
+    pointer-events: none;
+  }
+
+  &:global(.image-swiper-button-prev ) {
+    left: 0px;
+    border-radius: 0 5px 5px 0;
+  }
+
+  &:global(.image-swiper-button-next) {
+    right: 0px;
+    border-radius: 5px 0 0 5px;
+  }
+}
+
+.lightbox {
+  :global(.yarl__container) {
+    background-color: rgba(0, 0, 0, .85);
+  }
+  :global(.yarl__thumbnails_container) {
+    background-color: rgba(0, 0, 0, .85);
+  }
+  :global(.yarl__thumbnails_thumbnail) {
+    
+    &::after {
+      position: absolute;
+      content: '';
+      display: block;
+      width: 100%;
+      height: 100%;
+      border: 3px solid transparent;
+      transition: 0.3s all;
+    }
+  }
+  :global(.yarl__thumbnails_thumbnail_active)::after {
+    border-color: variables.$primary-color;
+  }
+  
+  // :global(.yarl__thumbnails_vignette) {
+  //   background: none;
+  // } 
+  // :global(.yarl__thumbnails_thumbnail) {
+  //   background: transparent;
+  //   padding: 0;
+  //   border: none;
+  //   width: auto;
+  // }
+}
+
