--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,10 +2,22 @@
 @import 'base/variables';
 
 html {
-  // background: red
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.6rem;
+}
+
+h1, h2, h3, h4 {
+  margin-bottom: 1em;
+  color: $primary-color;
+}
+
+p {
+  margin-bottom: 1.5em;
 }
 
 a {
   color: inherit;
-  
 }
