--- a/src/pages/styles.module.scss
+++ b/src/pages/styles.module.scss
@@ -1,5 +1,14 @@
 .grid {
     display: grid;
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     gap: 32px;
+
+    @media (max-width: 1024px) {
+        grid-template-columns: repeat(2, minmax(0, 374px));
+        justify-content: center;
+    }
+
+    @media (max-width: 768px) {
+        grid-template-columns: repeat(1, minmax(0, 374px));
+    }
 }
