--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,6 +1,8 @@
 $header-height: 127px;
+$header-height-small: 80px;
 
 $primary-color: #DF893F;
 $secondary-color: #00768F;
-// $secondary-color: #00768F;
+$secondary-color--light: #0FB8DB;
+
 $grey-color: #272727;
