--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -7,7 +7,7 @@
   left: 0;
   right: 0;
   z-index: 10;
-  transition: all 0.3s;
+  transition: background 0.3s;
 
   &.transparent {
     background: transparent;
@@ -15,15 +15,23 @@
     box-shadow: none;
   }
 
-  &.isScrolled {
-    background: variables.$secondary-color;
-  }
-
   .headerContainer {
     display: flex;
     justify-content: space-between;
     height: variables.$header-height;
     align-items: center;
+    transition: all 0.3s;
+
+  }
+
+  &.isScrolled {
+    background: variables.$secondary-color;
+    color: #fff;
+    box-shadow: 0 3px 14px rgba(0, 0, 0, 0.14);
+
+    .headerContainer {
+      height: variables.$header-height-small;
+    }
   }
 }
 
