--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -6,13 +6,58 @@
   position: fixed;
   left: 0;
   right: 0;
-  z-index: 10;
+  z-index: 99;
   transition: background 0.3s;
 
-  &.transparent {
-    background: transparent;
-    color: #fff;
-    box-shadow: none;
+  nav {
+    display: flex;
+    align-items: center;
+
+    ul {
+      padding: 0;
+      margin: 0;
+      list-style: none;
+      display: flex;
+      align-items: center;
+      gap: 20px;
+
+      li {
+        a {
+          position: relative;
+          text-decoration: none;
+          font-weight: 400;
+          font-size: 1.8rem;
+          line-height: 2.7rem;
+
+          text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.22);
+
+          padding: 5px;
+          transition: all 0.3s;
+          color: #000;
+
+          &::before {
+            content: '';
+            position: absolute;
+            display: block;
+            left: 5px;
+            bottom: 0;
+            width: 53px;
+            height: 1px;
+            background: #fff;
+            opacity: 0;
+            transition: all 0.3s;
+          }
+
+          &:hover {
+            color: variables.$secondary-color--light;
+
+            &::before {
+              opacity: 1;
+            }
+          }
+        }
+      }
+    }
   }
 
   .headerContainer {
@@ -24,17 +69,62 @@
 
   }
 
+  .logo-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .logo-text {
+      margin-top: 14px;
+
+      path {
+        fill: variables.$grey-color;
+      }
+    }
+  }
+
+
+
+  &.transparent {
+    background: transparent;
+    box-shadow: none;
+
+    nav ul li a {
+      color: #fff;
+    }
+
+    .logo-wrapper .logo-text path {
+      fill: #fff;
+    }
+  }
+
   &.isScrolled {
     background: variables.$secondary-color;
-    color: #fff;
     box-shadow: 0 3px 14px rgba(0, 0, 0, 0.14);
+
+    nav ul li a {
+      color: #fff;
+
+      &:hover {
+        // color: variables.$primary-color;
+      }
+    }
 
     .headerContainer {
       height: variables.$header-height-small;
     }
-  }
-}
 
-.logo {
-  // height: 70px;
+    .logo-wrapper {
+      flex-direction: row;
+      align-items: center;
+
+      .logo-text {
+        margin: 0;
+
+        path {
+          fill: #fff;
+        }
+      }
+    }
+  }
 }
